# PyManifold

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yaml
pymanifold/: __init__.py  lib.py  types.py
pymanifold/utils/: __init__.py  kelly.py  math.py
tests/: __init__.py  test_pymanifold.py
tests/fixtures/cassettes/: test_cancel_market  test_create_bet  test_create_bet_binary  test_create_bet_free_response  test_create_comment  test_create_market_binary  test_create_market_free_response  test_create_market_multiple_choice  test_create_market_numeric  test_get_groups  test_get_market_by_id  test_get_market_by_slug  test_get_market_by_url  test_get_markets  test_get_user  test_list_groups  test_list_markets  test_resolve_market_binary  test_resolve_market_free_resonse  test_resolve_market_multiple_choice  test_resolve_market_pseudo_numeric
tests/fixtures/cassettes/test_get_bet/: contractSlug.yaml  market.yaml  none.yaml  username.yaml
tests/fixtures/cassettes/test_list_bet/: contractSlug.yaml  market.yaml  none.yaml  username.yaml
